@@ -1,8 +1,0 @@
-config BR2_PACKAGE_XLIB_LIBXXF86MISC
-	bool "libXxf86misc"
-	select BR2_PACKAGE_XLIB_LIBX11
-	select BR2_PACKAGE_XLIB_LIBXEXT
-	select BR2_PACKAGE_XPROTO_XF86MISCPROTO
-	select BR2_PACKAGE_XPROTO_XPROTO
-	help
-	  X.Org Xxf86misc library
